# euler

./: .gitignore  Makefile.in  README.md  configure.ac  refactor1.txt
doc/: .gitignore  Euler.bib  Euler.tex
lang/C/: 1-2.c
lang/C/ds/: queue.h
problems/1/: .gitignore  naive.c
problems/2/: .gitignore  2.c  3.c
problems/3/: .gitignore
src/: Makefile.in
src/lang/C/: .gitignore  10-1.c  11-1.c  12-1.c  13-1.c  14-1.c  14-2.c  14-test.c  15-1.c  16-1.c  18-1.c  18-test.c  19-1.c  2-1.c  2-2.c  20-1.c  21-1.c  22-1.c  3-1.c  4-1.c  5-1.c  6-1.c  67-1.c  7-1.c  8-1.c  8-1a.c  8-1b.c  8-2.c  9-1.c  9-2.c  99-1.c  Makefile.in  algebra.c  algebra.h  bignumber.h  factor.c  factor.h  makeString.c  palindrome.c  palindrome.h  (+3 more)
src/lang/C/dlmalloc/: Makefile.in
src/lang/C/ds/: .gitignore  Makefile.in  queue.c  test.c
src/lang/C/malloc/: .gitignore
